corrected alignment in clinic text

--- a/css/agency.css
+++ b/css/agency.css
@@ -798,7 +798,9 @@ ul.social-buttons li a:active {
 }
 
 .portfolio-modal .modal-content p {
-    margin-bottom: 30px;
+    /*margin-bottom: 30px;*/
+    text-align: left;
+    margin-top: 10px;
 }
 
 .portfolio-modal .modal-content p.item-intro {
@@ -806,6 +808,7 @@ ul.social-buttons li a:active {
     font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 16px;
     font-style: italic;
+    text-align: center;
 }
 
 .portfolio-modal .modal-content ul.list-inline {
